--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.1",
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "react": "^18.3.1",
