--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "appwrite": "^15.0.0",
     "axios": "^1.7.2",
+    "base-64": "^1.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "open": "^10.1.0",
+    "utf8": "^3.0.0"
   }
 }
