--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bun index.js"
+    "start": "node index.js",
+    "dev": "node index.js --watch"
   },
   "keywords": [],
   "author": "",
