--- a/scripts/package.json
+++ b/scripts/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "open": "^10.1.0",
+    "qrcode": "^1.5.3",
     "utf8": "^3.0.0"
   }
 }
