--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.24.1",
     "react-scroll-parallax": "^3.4.5",
     "react-toastify": "^10.0.5",
